feat: semantic checker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,23 @@ file(GLOB_RECURSE sources src/*.cpp src/*.h)
 add_executable(code ${sources})
 
 target_link_libraries(code MxAntlr)
+
+set(TestdataPath "${PROJECT_SOURCE_DIR}/testcases")
+set(SemaPath "${TestdataPath}/sema")
+file(GLOB_RECURSE test_files RELATIVE ${SemaPath} ${SemaPath}/**.mx)
+foreach (test_file ${test_files})
+    string(REGEX REPLACE ".*/" "" filename "${test_file}")
+    set(testname "sema|${filename}")
+    execute_process(COMMAND grep "Verdict: " "${SemaPath}/${test_file}" COMMAND sed "s/Verdict: //"
+            OUTPUT_VARIABLE verdict)
+    add_test(NAME ${testname}
+            COMMAND $<TARGET_FILE:code> ${SemaPath}/${test_file} -fsyntax-only
+            WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/build")
+    set_tests_properties(${testname} PROPERTIES LABELS "sema")
+    if (NOT "${verdict}" STREQUAL "Success\n")
+        set_tests_properties(${testname} PROPERTIES WILL_FAIL true)
+        message(STATUS "Test ${testname} will fail")
+    endif ()
+endforeach ()
+
+enable_testing()
