--- a/MxAntlr/CMakeLists.txt
+++ b/MxAntlr/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
 
+include_directories(/usr/include/antlr4-runtime/)
 include_directories(/usr/local/include/antlr4-runtime/)
 
 file(GLOB MxAntlrSources *.cpp)
