feat: declare builtin function shell ctest of codegen fix: br in for and while condition

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,15 @@
 cmake_minimum_required(VERSION 3.20)
 project(MxCompiler)
 
+set(CMAKE_CXX_COMPILER /usr/bin/g++-11)
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_EXPORT_COMPILE_COMMANDS OFF)
 
 add_subdirectory(MxAntlr)
 
 include_directories(/usr/include/antlr4-runtime/)
 include_directories(/usr/local/include/antlr4-runtime/)
+include_directories(/usr/local/include/c++/11)
 include_directories(MxAntlr/)
 include_directories(SYSTEM src)
 include_directories(src/AST)
@@ -29,12 +32,24 @@ foreach (test_file ${test_files})
             OUTPUT_VARIABLE verdict)
     add_test(NAME ${testname}
             COMMAND $<TARGET_FILE:mxc> ${SemaPath}/${test_file} "-fsyntax-only"
-            WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/build")
+            WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/test")
     set_tests_properties(${testname} PROPERTIES LABELS "sema")
     if (NOT "${verdict}" STREQUAL "Success\n")
         set_tests_properties(${testname} PROPERTIES WILL_FAIL true)
         # message(STATUS "Test ${testname} will fail")
     endif ()
+endforeach ()
+
+set(CodegenPath "${TestdataPath}/codegen")
+file(GLOB_RECURSE test_files RELATIVE ${CodegenPath} ${CodegenPath}/**.mx)
+foreach (test_file ${test_files})
+    string(REGEX REPLACE ".*/" "" filename "${test_file}")
+    set(testname "codegen|${filename}")
+    message(STATUS "dir: ${PROJECT_SOURCE_DIR}")
+    add_test(NAME ${testname}
+            COMMAND "${PROJECT_SOURCE_DIR}/run-codegen.bash" $<TARGET_FILE:mxc> ${CodegenPath}/${test_file}
+            WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/test")
+    set_tests_properties(${testname} PROPERTIES LABELS "codegen")
 endforeach ()
 
 enable_testing()
