feat: phi in ternary

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ include_directories(SYSTEM src)
 include_directories(src/AST)
 include_directories(src/Util)
 include_directories(src/IR)
+include_directories(src/ASM)
 
 file(GLOB_RECURSE sources src/*.cpp src/*.h)
 
