--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
 project(MxCompiler)
 
-set(CMAKE_CXX_COMPILER /usr/bin/g++-11)
+# set(CMAKE_CXX_COMPILER /usr/bin/g++-11)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
