feat: asmVar -> virtual reg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,10 @@ include_directories(SYSTEM src)
 include_directories(src/AST)
 include_directories(src/Util)
 include_directories(src/IR)
-include_directories(src/ASM)
+# include_directories(src/ASM)
+include_directories(src/NaiveASM)
 include_directories(src/Optimize/Mem2Reg)
+include_directories(src/Optimize/RegAllocation)
 
 file(GLOB_RECURSE sources src/*.cpp src/*.h)
 
